--- a/BlairCorban-Summative1/Shaders/Shaders.vcxproj
+++ b/BlairCorban-Summative1/Shaders/Shaders.vcxproj
@@ -138,6 +138,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <None Include="fragment_shader.glsl" />
+    <None Include="geometry_shader.glsl" />
     <None Include="vertex_shader.glsl" />
   </ItemGroup>
   <ItemGroup>
@@ -154,6 +155,9 @@
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Model.cpp" />
     <ClCompile Include="ShaderHelper.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <Image Include="heightmap.png" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
