--- a/BlairCorban-Summative1/Shaders/Shaders.vcxproj.filters
+++ b/BlairCorban-Summative1/Shaders/Shaders.vcxproj.filters
@@ -27,6 +27,12 @@
     <None Include="geometry_shader.glsl">
       <Filter>Shaders</Filter>
     </None>
+    <None Include="tesselation_shader.glsl">
+      <Filter>Shaders</Filter>
+    </None>
+    <None Include="tesselationevaluation_shader.glsl">
+      <Filter>Shaders</Filter>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="ShaderHelper.h">
