--- a/BlairCorban-Summative1/Shaders/Shaders.vcxproj.filters
+++ b/BlairCorban-Summative1/Shaders/Shaders.vcxproj.filters
@@ -53,6 +53,9 @@
     <ClInclude Include="stb_image.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="TessModel.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="ShaderHelper.cpp">
@@ -68,6 +71,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="GameScene.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="TessModel.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
